# pygments-web

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  feat.yml
.github/workflows/: codeql-analysis.yml
highlight/: manage.py  pyproject.toml  requirements.txt
highlight/highlight/: asgi.py  settings.py  urls.py  wsgi.py
highlight/highlightapp/: apps.py  font.css  urls.py  views.py
highlight/highlightapp/static/: package-lock.json  package.json
highlight/highlightapp/templates/highlight/: ace.html  edit.html  highlight.html  index.html  layout.html  topdf.html
