[tool.poetry]
name = "highlight"
version = "0.1.0"
description = ""
authors = ["Dalton Ma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
weasyprint = "59.0"
Pygments = "^2.16.1"
Django = "^4.2.5"
whitenoise = "^6.5.0"
jinja2 = "^3.1.2"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
jedi = "^0.19.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
